--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<title>Introduction to TouchDesigner</title>
+    <link href="StyleSheet.css" rel="stylesheet" />
+</head>
 <body>
 	<header>nVoid</header>
 	<main>
 		<h1>Introduction to TouchDesigner</h1>
-		<p>English PDF</p>
-		<p>English Online</p>
-		<p>Japanese</p>
+		<h2>English</h2>
+		<p>
+			<a href="https://leanpub.com/introductiontotouchdesigner/">Online</a>
+			<a href="book/en/introductiontotouchdesigner.pdf">PDF</a>
+			<a href="book/en/introductiontotouchdesigner.epub">EPUB</a>
+			<a href="book/en/introductiontotouchdesigner.mobi">MOBI</a>	
+		</p>
+		<h2>Italian</h2>
+		<p>
+			<a href="https://leanpub.com/introductiontotouchdesigner-it/">Online</a>
+			<a href="book/it/introductiontotouchdesigner-it.pdf">PDF</a>
+			<a href="book/it/introductiontotouchdesigner-it.epub">EPUB</a>
+			<a href="book/it/introductiontotouchdesigner-it.mobi">MOBI</a>	
+		</p>
 		<p>Italian</p>
 		<p>Chinese</p>
 	</main>
+	<footer></footer> 
 </body>
 </html>
