--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 			<a href="book/it/introductiontotouchdesigner-it.epub">EPUB</a>
 			<a href="book/it/introductiontotouchdesigner-it.mobi">MOBI</a>	
 		</p>
-		<p>Italian</p>
-		<p>Chinese</p>
+		<h2>Japanese</h2>
+		<h2>Chinese</h2>
 	</main>
 	<footer></footer> 
 </body>
