add project files and jp download

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 											<div class="row" style="margin-bottom: 3.5em">
 												<div class="col-12">
 													<ul class="actions">
-														<li><a href="JAPANESE_LINK_HERE" class="button large">PDF</a></li>					
+														<li><a href="book/jp/日本語 Introduction to TouchDesigner.pdf" class="button large">PDF</a></li>					
 													</ul>
 												</div>
 											</div>
@@ -185,7 +185,7 @@
 											<div class="row" style="margin-bottom: 3.5em">
 												<div class="col-12">
 													<ul class="actions">
-														<li><a href="DOWNLOAD_LINK_HERE" class="button large">Download</a></li>
+														<li><a href="book/project/project_files.zip" class="button large">Download</a></li>
 													</ul>
 												</div>
 											</div>
