fix spacing of buttons

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 										<h2 class="major"><span>Downloads & Reading Options</span></h2>
 										<div>
 
-											<div class="row">
+											<div class="row" style="margin-bottom:3.5em">
 												<div class="col-4">
 												</div>
 												<div class="col-4" align="center">
@@ -90,8 +90,8 @@
 												</div>
 											</div>
 											<div class="row" style="margin-bottom: 3.5em">
-												<div class="col-12">
-													<ul class="actions">
+												<div class="col-12" style="padding-top:0em">
+													<ul class="actions" style="margin-top:0em">
 														<li><a href="https://leanpub.com/introductiontotouchdesigner/" class="button large">Online</a></li>
 														<li><a href="book/en/introductiontotouchdesigner.pdf" class="button alt large">PDF</a></li>
 														<li><a href="book/en/introductiontotouchdesigner.epub" class="button large">EPUB</a></li>
@@ -105,7 +105,7 @@
 
 
 										<div>
-											<div class="row">
+											<div class="row" style="margin-bottom:3.5em">
 												<div class="col-4">
 												</div>
 												<div class="col-4" align="center">
@@ -115,8 +115,8 @@
 												</div>
 											</div>
 											<div class="row" style="margin-bottom: 3.5em">
-												<div class="col-12">
-													<ul class="actions">
+												<div class="col-12" style="padding-top:0em">
+													<ul class="actions" style="margin-top:0em">
 														<li><a href="https://leanpub.com/introductiontotouchdesigner-it/" class="button large">Online</a></li>
 														<li><a href="book/it/introductiontotouchdesigner-it.pdf" class="button alt large">PDF</a></li>
 														<li><a href="book/it/introductiontotouchdesigner-it.epub" class="button large">EPUB</a></li>
@@ -131,7 +131,7 @@
 
 
 										<div>
-											<div class="row">
+											<div class="row" style="margin-bottom:3.5em">
 												<div class="col-4">
 												</div>
 												<div class="col-4" align="center">
@@ -141,8 +141,8 @@
 												</div>
 											</div>
 											<div class="row" style="margin-bottom: 3.5em">
-												<div class="col-12">
-													<ul class="actions">
+												<div class="col-12" style="padding-top:0em">
+													<ul class="actions" style="margin-top:0em">
 														<li><a href="book/jp/日本語 Introduction to TouchDesigner.pdf" class="button large">PDF</a></li>					
 													</ul>
 												</div>
@@ -152,7 +152,7 @@
 
 
 										<div>
-											<div class="row">
+											<div class="row" style="margin-bottom:3.5em">
 												<div class="col-4">
 												</div>
 												<div class="col-4" align="center">
@@ -162,8 +162,8 @@
 												</div>
 											</div>
 											<div class="row" style="margin-bottom: 3.5em">
-												<div class="col-12">
-													<ul class="actions">
+												<div class="col-12" style="padding-top:0em">
+													<ul class="actions" style="margin-top:0em">
 														<li><a href="http://www.touchdesigner.co/documents" class="button large">Online</a></li>
 													</ul>
 												</div>
@@ -173,7 +173,7 @@
 
 
 										<div>
-											<div class="row">
+											<div class="row" style="margin-bottom:3.5em">
 												<div class="col-4">
 												</div>
 												<div class="col-4" align="center">
@@ -183,8 +183,8 @@
 												</div>
 											</div>
 											<div class="row" style="margin-bottom: 3.5em">
-												<div class="col-12">
-													<ul class="actions">
+												<div class="col-12" style="padding-top:0em">
+													<ul class="actions" style="margin-top:0em">
 														<li><a href="book/project/project_files.zip" class="button large">Download</a></li>
 													</ul>
 												</div>
