update new links so they work, needed http

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 												<div class="col-4">
 												</div>
 												<div class="col-4" align="center">
-													<h3>Japanese Version - <a href="www.alelotranslation.com">Chie Hishigata</a>, <a href="www.derivative.ca">Ben Voigt</a>, <a href="www.antymark.com">Naohide Matsunami</a> </h3>
+													<h3>Japanese Version - <a href="http://www.alelotranslation.com">Chie Hishigata</a>, <a href="http://www.derivative.ca">Ben Voigt</a>, <a href="http://www.antymark.com">Naohide Matsunami</a> </h3>
 												</div>
 												<div class="col-4">
 												</div>
@@ -156,7 +156,7 @@
 												<div class="col-4">
 												</div>
 												<div class="col-4" align="center">
-													<h3>Chinese Version - <a href="www.touchdesigner.co">Totti Chen</a></h3>
+													<h3>Chinese Version - <a href="http://www.touchdesigner.co">Totti Chen</a></h3>
 												</div>
 												<div class="col-4">
 												</div>
